add logo and links in the footer

--- a/index.html
+++ b/index.html
@@ -295,7 +295,9 @@
       <div class="socials">
         <a href="#"><i class="bi bi-twitter-x"></i></a>
          <a href="#"><i class="bi bi-youtube"></i></a>
-         &copy;2025 Local 
+
+       <br>  <img src="Images/localwp-logo.png" alt="" width="20%">
+       <br>  &copy;2025 Local 
 
             <ul  class="list-group">
           <a href="#" class="f-links"><li class="list-item">Terms of services</li></a>  
