list item footer

--- a/index.html
+++ b/index.html
@@ -297,11 +297,12 @@
          <a href="#"><i class="bi bi-youtube"></i></a>
 
        <br>  <img src="Images/localwp-logo.png" alt="" width="20%">
-       <br>  &copy;2025 Local 
+       <br>  
 
-            <ul  class="list-group">
-          <a href="#" class="f-links"><li class="list-item">Terms of services</li></a>  
-          <a href="#" class="f-links"><li class="list-item">Careers</li></a>  
+            <ul  class="list-group d-inline">
+          <a href="#" class="f-links">&copy;2025 Local </a>
+          <a href="#" class="f-links"><li class="list-item1">Terms of services</li></a>  
+          <a href="#" class="f-links"><li class="list-item1">Careers</li></a>  
           </ul>
       </div>
     
