--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
           <a href="#" class="f-links">&copy;2025 Local </a>
           <a href="#" class="f-links"><li class="list-item1">Terms of services</li></a>  
           <a href="#" class="f-links"><li class="list-item1">Careers</li></a>  
+          <a href="#" class="f-links"><li class="list-item1">Privacy policy</li></a>  
           </ul>
       </div>
     
