--- a/index.html
+++ b/index.html
@@ -305,6 +305,13 @@
           <a href="#" class="f-links"><li class="list-item1">Careers</li></a>  
           <a href="#" class="f-links"><li class="list-item1">Privacy policy</li></a>  
           </ul>
+
+          <p class="description">
+            1WP Engine is a proud member and supporter of the community of WordPress® users.
+ The WordPress® trademarks are the intellectual property of the WordPress Foundation, and the Woo® and WooCommerce® trademarks are the intellectual property of WooCommerce, Inc. 
+Uses of the WordPress®, Woo®, and WooCommerce® names in this website are for identification purposes only and do not imply an endorsement by WordPress Foundation or WooCommerce, Inc. 
+WP Engine is not endorsed or owned by, or affiliated with, the WordPress Foundation or WooCommerce, Inc.
+          </p>
       </div>
     
          
