add margins on fheadings

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="col-12  mt-4 mb-4">
 <img src="Images/local7.png" alt="" width="50%" class="fimages" >
 
-<h1 class="fimages hmagic llinks">   MagicSync </h1>
+<h1 class="fimages hmagic ">   MagicSync </h1>
 
 <p class="description">
   Our differential deployment technology intelligently recommends files to update and gives you control over which files to sync.
@@ -162,7 +162,7 @@
         </div>
         <div class="col-12 mt-4 mb-4">
           <img src="Images/local2.png" alt="" width="50%" class="fimages" >
-          <h1 class="fimages llinks">   Live links </h1>
+          <h1 class="fimages hmagic ">   Live links </h1>
   <p class="description">
     Create persistent URLs to send your local WordPress sites to clients and coworkers without deploying.
  <br>  <a href="#" class="Learn">Learn more</a> .
