increase modal size on mobile phone.

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
    <br> <a href="#" class="Hosting links ">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
 
    <!-- The Modal -->
-<div class="modal modal-dialog modal-sm" id="myModal">
+<div class="modal modal-dialog " id="myModal">
   <div class="modal-dialog ">
     <div class="modal-content ">
 
