--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
            The #1 local WordPress® development tool
         </h2>
         <h4 class="heading smallh mt-4">An effortless way to develop WordPress  sites locally</h4>
-    
-<button class="btn-primary mt-5 ms-5 mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Download for free </button>
+    <div class="main_btns">
+<button class="btn-primary mt-5 mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Download for free </button>
     
    <br> <a href="#" class="Hosting links ">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
+   </div>
 
    <!-- The Modal -->
 <div class="modal  " id="myModal">
