centering text blow dbtn

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
         <h4 class="heading smallh mt-4">An effortless way to develop WordPress  sites locally</h4>
     <div class="main_btns">
 <button class="btn-primary mt-5 mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Download for free </button>
-    
-   <br> <a href="#" class="Hosting links ">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
+   
+   <br> <a href="#" class="Hosting_links ">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
+   
    </div>
 
    <!-- The Modal -->
