--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="main_btns">
 <button class="btn-primary mt-5 mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Download for free </button>
    
-   <br> <a href="#" class="Hosting_links text-center">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
+   <br> <a href="#" class="Hosting text-center">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
    
    </div>
 
