--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <h4 class="heading smallh mt-4">An effortless way to develop WordPress  sites locally</h4>
     <div class="main_btns">
 <button class="btn-primary mt-5 mb-2" data-bs-toggle="modal" data-bs-target="#myModal">Download for free </button>
-   <div class="text-center">
-   <br> <a href="#" class="Hosting text-center">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
-   </div>
-   </div>
+  </div>
+   <br> <a href="#" class="Hosting">GET HOSTING <i class="bi bi-chevron-compact-right" ></i></a>
+   
+   
 
    <!-- The Modal -->
 <div class="modal  " id="myModal">
